plugins {
    id "java-library"
    id "net.ltgt.errorprone" version "4.3.0"
}

repositories {
    mavenCentral()
}

dependencies {
    errorprone("com.google.errorprone:error_prone_core:2.24.1")
    compileOnly("com.google.errorprone:error_prone_core:2.24.1")
    compileOnly("com.google.auto.service:auto-service-annotations:1.0.1")
    annotationProcessor("com.google.auto.service:auto-service:1.0.1")
}


java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone {
        disableAllChecks = true
    }
    options.compilerArgs.addAll([
        "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
    ])
}

task printSourceRoots {
    doLast {
        sourceSets.main.allSource.srcDirs.each { srcDir ->
            println "Main source root: $srcDir"
        }
    }
}